--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">Smart App</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_clinic">ClinicActivity</string>
 
 </resources>
