--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Smart App</string>
-    <string name="hello_world">hello_world</string>
-    <string name="title_activity_dublin_domino">Service options</string>
+    <string name="domino_view">Select the Service option you's like to view</string>
+    <string name="hello_world">Hello World</string>
+    <string name="label_title">My Text Label</string>
+    <string name="button_one">one</string>
+    <string name="button_two">two</string>
+    <string name="button_three">three</string>
+    <string name="button_four">four</string>
+    <string name="button_five">five</string>
+    <string name="title_activity_etc">EtcActivity</string>
 
 </resources>
