--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,19 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Smart App</string>
-    <string name="greystones">Greystones</string>
-    <string name="monday">\n	-Weekly, Monday</string>
-    <string name="greystones_tuesday">Greystones\n	-Weekly, Tuesday</string>
-    <string name="kilmacanogue">Kilmacanogue\n	-Weekly, Thursday</string>
-    <string name="home_visits">Home Visits\n	-Miscellaneous\n-Daily</string>
-    
-    <string-array name="greystones_test">
-        <item>Greystones</item>
-        <item>\n-Weekly, Monday</item>
-    </string-array>
-    
     <string name="domino_view">Select the Service option you's like to view</string>
+      <string name="eth_view">Select the ETH(Dublin) clinic calendar you'd like to view</string>
     <string name="hello_world">Hello World</string>
     <string name="label_title">My Text Label</string>
     <string name="button_one">one</string>
@@ -21,6 +10,8 @@
     <string name="button_three">three</string>
     <string name="button_four">four</string>
     <string name="button_five">five</string>
+     <string name="button_six">Ballinteer</string>
+      <string name="button_seven">Dun Laoghaire</string>
     <string name="title_activity_etc">EtcActivity</string>
 
 </resources>
