Extra strings added

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,13 +5,12 @@
     <string name="greystones">Greystones</string>
     <string name="monday">\n	-Weekly, Monday</string>
     <string name="greystones_tuesday">Greystones\n	-Weekly, Tuesday</string>
+     <string name="ballinteer_monday">Ballinteer\n	-Weekly, Monday</string>
+     <string name="dunLaoghaire_tuesday">Dun Laoghaire\n	-Weekly, Tuesday</string>
     <string name="kilmacanogue">Kilmacanogue\n	-Weekly, Thursday</string>
     <string name="home_visits">Home Visits\n	-Miscellaneous\n-Daily</string>
 
-    <string-array name="greystones_test">
-        <item>Greystones</item>
-        <item>\n-Weekly, Monday</item>
-    </string-array>
+   
 
     <string name="domino_view">Select Service option</string>
     <string name="hello_world">Hello World</string>
