--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">Smart App</string>
-    <string name="greystones">Greystones</string>
+    
+	<string name="app_name">Smart App</string>	
+	 
+	<string-array name="greystones_test">
+        <item>Greystones</item>
+        <item>\n-Weekly, Monday</item>
+    </string-array>
+    
+	<string name="greystones">Greystones</string>
     <string name="monday">\n	-Weekly, Monday</string>
     <string name="greystones_monday">Greystones\n	-Weekly, Monday</string>
     <string name="greystones_tuesday">Greystones\n	-Weekly, Tuesday</string>
