--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,27 +14,30 @@
     <string name="title_activity_etc_wicklow">EtcWicklowActivity</string>
     <string name="title_activity_satellite">MainActivity</string>
     
-    <string name="Service_Options">Service Options</string>
     <string name="DominoD">Domino(Dublin)</string>
     <string name="DominoW">Domino(Wicklow)</string>
     <string name="ETHD">ETH(Dublin)</string>
     <string name="ETHW">ETH(Wiclow)</string>
     <string name="Satellite">Satellite</string>
+    
+    <string name="Service_Options">Service Options</string>
+    
     <string name="button_NMH_OPD">NMH(OPD Location)\n-Evening Booking Clinic\n-Weekly,Monday)</string>
-    <string name="Leopardstown">Leopardstown\n-Weekly,Tuesday\n</string>
-    <string name="Dunlaoghaire">Dun laoghaire\n-St. Michaels Hospital\n-Weekly,Wednesday</string>
-    <string name="Churchtown">Churchtown\n-Weekly,Thursday\n</string>
-    <string name="NMH">NMH\n-Weekly,Friday\n</string>
-    <string name="Homevisits">Home visits\n-Miscellaneous\n-Daily</string>
-    <string name="monday">\n	-Weekly, Monday</string>
+    <string name="leopardstown">Leopardstown\n-Weekly,Tuesday\n</string>
+    <string name="dunlaoghaire">Dun laoghaire\n-St. Michaels Hospital\n-Weekly,Wednesday</string>
+    <string name="churchtown">Churchtown\n-Weekly,Thursday\n</string>
+    <string name="nmh">NMH\n-Weekly,Friday\n</string>
+    <string name="home_visits">Home Visits\n	-Miscellaneous\n-Daily</string>
+    
     <string name="greystones_monday">Greystones\n	-Weekly, Monday</string>
     <string name="greystones_tuesday">Greystones\n	-Weekly, Tuesday</string>
+    <string name="kilmacanogue">Kilmacanogue\n	-Weekly, Thursday</string>
+    
     <string name="ballinteer_monday">Ballinteer\n	-Weekly, Monday</string>
     <string name="dunLaoghaire_tuesday">Dun Laoghaire\n	-Weekly, Tuesday</string>
-    <string name="kilmacanogue">Kilmacanogue\n	-Weekly, Thursday</string>
+    
     <string name="bray_thursday">Bray\n	-Weekly, Thursday</string>
     <string name="arklow_tuesday">Arklow\n	-Weekly, Tuesday</string>
     <string name="newtownmountkennedy_wednesday">Newtownmountkennedy\n	-Weekly, Wednesday \n-Booking clinics</string>
-    <string name="home_visits">Home Visits\n	-Miscellaneous\n-Daily</string>
     <string name="domino_view">Select Service option</string>
 </resources>
