--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="title_activity_clinic">Clinic Activity</string>
     <string name="title_activity_main_activity_domino">Domino </string>
     <string name="Service_Options">Service Options</string>
@@ -8,7 +9,6 @@
     <string name="ETHD">ETH(Dublin)</string>
     <string name="ETHW">ETH(Wiclow)</string>
     <string name="Satellite">Satellite</string>
-    
     <string name="app_name">Clinics</string>
     <string name="button_NMH_OPD">NMH(OPD Location)\n-Evening Booking Clinic\n-Weekly,Monday)</string>
     <string name="Leopardstown">Leopardstown\n-Weekly,Tuesday\n</string>
@@ -16,12 +16,12 @@
     <string name="Churchtown">Churchtown\n-Weekly,Thursday\n</string>
     <string name="NMH">NMH\n-Weekly,Friday\n</string>
     <string name="Homevisits">Home visits\n-Miscellaneous\n-Daily</string>
-    
+
     <string-array name="greystones_test">
         <item>Greystones</item>
         <item>\n-Weekly, Monday</item>
     </string-array>
-    
+
     <string name="monday">\n	-Weekly, Monday</string>
     <string name="greystones_monday">Greystones\n	-Weekly, Monday</string>
     <string name="greystones_tuesday">Greystones\n	-Weekly, Tuesday</string>
@@ -37,5 +37,7 @@
     <string name="title_activity_domino_dublin">DominoDublinActivity</string>
     <string name="title_activity_domino_wicklow">DominoWicklowActivity</string>
     <string name="title_activity_satellite">MainActivity</string>
+    <string name="title_activity_etc_wicklow">MainActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
