--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string-array name="greystones_test">
         <item>Greystones</item>
         <item>\n-Weekly, Monday</item>
-    </string-array>
-
+    </string-array>   
+    
+    <string name="login">Login</string>
     <string name="app_name">Clinics</string>
     <string name="title_activity_clinic">Clinic Activity</string>
     <string name="title_activity_domino_dublin">DominoDublinActivity</string>
@@ -13,36 +14,31 @@
     <string name="title_activity_etc_dublin">EtcDublinActivity</string>
     <string name="title_activity_etc_wicklow">EtcWicklowActivity</string>
     <string name="title_activity_satellite">MainActivity</string>
-    <string name="title_activity_clinic_dates_"></string>
+    
     <string name="domino_d">Domino(Dublin)</string>
     <string name="domino_w">Domino(Wicklow)</string>
-    <string name="ETHD">ETH(Dublin)</string>
-    <string name="ETHW">ETH(Wiclow)</string>
-    <string name="Satellite">Satellite</string>
-    <string name="Service_Options">Service Options</string>
-    <string name="domino_NMH_OPD">NMH(OPD Location)\n-Evening Booking Clinic\n-Weekly,Monday)</string>
+    <string name="ethd">ETH(Dublin)</string>
+    <string name="ethw">ETH(Wiclow)</string>
+    <string name="satellite">Satellite</string>
+    
+    <string name="service_options">Service Options</string>
+    
+    <string name="button_nmh_opd">NMH(OPD Location)\n-Evening Booking Clinic\n-Weekly,Monday)</string>
     <string name="leopardstown">Leopardstown\n-Weekly,Tuesday\n</string>
     <string name="dunlaoghaire">Dun laoghaire\n-St. Michaels Hospital\n-Weekly,Wednesday</string>
     <string name="churchtown">Churchtown\n-Weekly,Thursday\n</string>
     <string name="nmh">NMH\n-Weekly,Friday\n</string>
     <string name="home_visits">Home Visits\n	-Miscellaneous\n-Daily</string>
+    
     <string name="greystones_monday">Greystones\n	-Weekly, Monday</string>
     <string name="greystones_tuesday">Greystones\n	-Weekly, Tuesday</string>
     <string name="kilmacanogue">Kilmacanogue\n	-Weekly, Thursday</string>
+    
     <string name="ballinteer_monday">Ballinteer\n	-Weekly, Monday</string>
     <string name="dunLaoghaire_tuesday">Dun Laoghaire\n	-Weekly, Tuesday</string>
+    
     <string name="bray_thursday">Bray\n	-Weekly, Thursday</string>
     <string name="arklow_tuesday">Arklow\n	-Weekly, Tuesday</string>
     <string name="newtownmountkennedy_wednesday">Newtownmountkennedy\n	-Weekly, Wednesday \n-Booking clinics</string>
-    <string name="domino_view">Select Service option</string>
-    <string name="login">Login</string>
-    <string name="Clinic_Dates">Clinic Dates</string>
-    <string name="week_one">Week 1\nMon, 01 Sep 2014</string>
-    <string name="week_two">Week 2\nMon, 08 Sep 2014</string>
-    <string name="week_three">Week 3\nMon, 15 Sep 2014</string>
-    <string name="week_four">Week 4\nMon, 22 Sep</string>
-    <string name="week_five">Week 5\nMon, 29 Sep</string>
-    <string name="week_six">Week 6\nMon, 06 Oct</string>
-
+    <string name="domino_view">Select Service option</string> 
 </resources>
-
