--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="title_activity_appointment_type">appointment_type</string>
     <string name="hello_world">Hello world!</string>
     
+    <string name="test_string">TEst String</string>
+    
 </resources>
