--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,5 +50,5 @@
     <string name="week_three">Week 3\nMon, 15 Sep 2014</string>
     <string name="week_four">Week 4\nMon, 22 Sep</string>
     <string name="week_five">Week 5\nMon, 29 Sep</string>
-    <string name="week_six">Week 6\nMon, 06 Oct</string>
+    <string name="week_six_lllll">Week 6\nMon, 06 Oct</string>
 </resources>
