commit before git ignore

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="clinics">Clinics</string>
     <string name="visits">Visits</string>
-    
     <string name="app_name">Clinics</string>
     <string name="title_activity_clinic">Clinic Activity</string>
     <string name="title_activity_domino_dublin">DominoDublinActivity</string>
@@ -34,11 +34,15 @@
     <string name="domino_view">Select Service option</string>
     <string name="login">Login</string>
     <string name="Clinic_Dates">Clinic Dates</string>
-    <string name="week_one">Week 1\nMon, 01 Sep 2014</string>
-    <string name="week_two">Week 2\nMon, 08 Sep 2014</string>
-    <string name="week_three">Week 3\nMon, 15 Sep 2014</string>
-    <string name="week_four">Week 4\nMon, 22 Sep</string>
-    <string name="week_five">Week 5\nMon, 29 Sep</string>
-    <string name="week_six">Week 6\nMon, 06 Oct</string>
+    <string name="week_one_nmh">Week 1\nMon, 01 Sep 2014</string>
+    <string name="week_two_nmh">Week 2\nMon, 08 Sep 2014</string>
+    <string name="week_three_nmh">Week 3\nMon, 15 Sep 2014</string>
+    <string name="week_four_nmh">Week 4\nMon, 22 Sep</string>
+    <string name="week_five_nmh">Week 5\nMon, 29 Sep</string>
+    <string name="week_six_nmh">Week 6\nMon, 06 Oct</string>
     <string name="title_activity_appointment_type">appointment_type</string>
+    <string name="title_activity_clinic__dates__nmh">Clinic_Dates_NMH</string>
+    <string name="hello_world">Hello world!</string>
+    
+
 </resources>
