--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,8 +17,7 @@
     <string name="title_activity_clinic_dates_churchtown">ClinicDatesChurchtown</string>
     <string name="title_activity_clinic_dates_nmhOPD">ClinicDatesnmh</string>
     <string name="title_activity_clinic_dates_nmh">ClinicDatesnmh</string>
-    
-    
+
     <!-- MAIN SCREEN -->
     <string name="main_logo"> main_logo</string>
     <string name="login">Login</string>
@@ -84,10 +83,19 @@
     <string name="week_four_nmh">Week 4\nFri, 26 Sep</string>
     <string name="week_five_nmh">Week 5\nFri, 03 Sep</string>
     <string name="week_six_nmh">Week 6\nFri, 10 Oct</string>
-
     <string name="title_activity_clinic_dates_homevisits">ClinicDatesHomevisits</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_nmh">NmhActivity</string>
-
+    <string name="title_activity_service_user">ServiceUser</string>
+    <!-- SERVICE USERS -->
+    <string name="Ante_Natal">Ante-Natal</string>
+    <string name="Personal">Personal</string>
+    <string name="Post_Natal">Post-Natal</string>
+    <string name="Contact">Contact</string>
+    <string name="Address">Address</string>
+    <string name="Next_Of_Kin">Next-of-kin</string>
+    <string name="Book_Appointment">Book Appointment</string>
+    
+    
 
 </resources>
