--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,7 +19,6 @@
     <string name="title_activity_clinic_dates_homevisits">ClinicDatesHomevisits</string>
     <string name="title_activity_nmh">NmhActivity</string>
     <string name="title_activity_select_time">SelectTime</string>
-    <string name="title_activity_select_time_activity_main">MainActivity</string>
     <!-- MAIN SCREEN -->
     <string name="main_logo"> main_logo</string>
     <string name="login">Login</string>
@@ -90,10 +89,10 @@
     <string name="week_five_nmh">Week 5\nFri, 03 Sep</string>
     <string name="week_six_nmh">Week 6\nFri, 10 Oct</string>
     <!-- Select Time-->
-    <string name="one_Select_time">08:30am</string>
-    <string name="two_Select_time">08:45am</string>
-    <string name="three_Select_time">09:00am</string>
-    <string name="four_Select_time">09:15am</string>
-    <string name="five_Select_time">09:30am</string>
-    <string name="six_Select_time">09:45am</string>
+    <string name="one_select_time">08:30am</string>
+    <string name="two_select_time">08:45am</string>
+    <string name="three_select_time">09:00am</string>
+    <string name="four_select_time">09:15am</string>
+    <string name="five_select_time">09:30am</string>
+    <string name="six_select_time">09:45am</string>
 </resources>
