--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -96,4 +96,14 @@
     <string name="four_Select_time">09:15am</string>
     <string name="five_Select_time">09:30am</string>
     <string name="six_Select_time">09:45am</string>
+    <!-- "CONFIRM_APPOINTMENT -->
+    <string name="service_user">Service User</string>
+    <string name="hospital_number">Hospital Number</string>
+    <string name="appointment_clinic">Appointment Clinic</string>
+    <string name="appointment_date">Appointment Date</string>
+    <string name="appointment_time">Appointment Time</string>
+    <string name="duration">Duration</string>
+    <string name="email_to">Email to:</string>
+    <string name="sms_to">SMS to:</string>
+    <string name="confirm_appointment">Confirm Appointment</string>
 </resources>
