--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="visits">Visits</string>
     <string name="app_name">Clinics</string>
     <!-- ACTIVITY TITLES -->
+    <string name="smart">Smart</string>
+    <string name="secure_maternity">Secure Maternity</string>
+    <string name="appointment_recording">Appointment Recording</string>
+    <string name="tracker">Tracker</string>
     <string name="title_activity_appointment_type">appointment_type</string>
     <string name="title_activity_clinic">Clinic Activity</string>
     <string name="title_activity_domino_dublin">DominoDublinActivity</string>
