--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="smart">Smart</string>
     <string name="secure_maternity">Secure Maternity</string>
     <string name="appointment_recording">Appointment Recording</string>
+    <string name="maternity_hospital">@ National Maternity Hospital, Ireland</string>
+    <string name="about">About</string>
     <string name="tracker">Tracker</string>
     <string name="title_activity_appointment_type">appointment_type</string>
     <string name="title_activity_clinic">Clinic Activity</string>
